--- a/templates/index.html
+++ b/templates/index.html
@@ -276,9 +276,7 @@
                                   <li style="transform: translateX(1227px); width: 1px;">
                                   </li>
                                   <li class="Ckrof" tabindex="-1" style="transform: translateX(0px);">
-                                    <div
-                                      class="                     Igw0E     IwRSH      eGOV_         _4EzTm                                                                                                              "
-                                      style="width: 614px;">
+                                    <div class="Igw0E IwRSH eGOV_ _4EzTm" style="width: 614px;">
                                       <div role="button" class="ZyFrc" tabindex="0">
                                         <div class="eLAPa RzuR0">
                                           <div class="KL4Bh" style="padding-bottom: 100%;">
