Tweet Integration continued
Tweepy

--- a/templates/index.html
+++ b/templates/index.html
@@ -366,10 +366,13 @@
                                 </path>
                               </svg></div>
                           </button>
-                          <div class="" style="right: 53px; bottom: 355px;"></div><textarea aria-label="Edit Caption"
-                            placeholder="Edit Caption..." class="Ypffh" autocomplete="off"
-                            autocorrect="off">{{ ecaption_html }}</textarea><button class="sqdOP  L3NKy   y3zKF     "
-                            type="button">Tweet</button>
+                          <div class="" style="right: 53px; bottom: 355px;">
+                          </div>
+                          <textarea aria-label="Edit Caption" placeholder="Edit Caption..." class="Ypffh"
+                            autocomplete="off" autocorrect="off">{{ ecaption_html }}
+                          </textarea>
+                          <a href=start><button class="sqdOP  L3NKy   y3zKF     " type="button">Tweet
+                            </button></a>
                         </form>
                       </div>
                     </section>
